@startuml
hide stereotype  
skinparam class {
	BackgroundColor White
	ArrowColor Black
	BorderColor Black
}
skinparam package {
	BackgroundColor #PaleGreen-white
	roundCorner 30
	style rectangle
}



package "Language fsm" as language_fsm {
	  class "FSM" as language_fsm_FSM {
	    name : String
	    initialState : State
	    finalState : State
	  }
	  class "State"  as language_fsm_State{
	    name : String
	    incommingTransition : Transition
	  }
		class "Transition"  as language_fsm_Transition {
			input : String
			target : State
		}
		language_fsm_FSM *-- language_fsm_State : ownedStates
		language_fsm_State *-- language_fsm_Transition : outgoingTransitions
	
}



package "Language xsfsm" as language_xsfsm  {
	  class FSM {
	    name : String
	    initialState : State
	    finalState : State
	    currentState : State
	    run()
	  }
	  class State{
	    name : String
	    incommingTransition : Transition
	    step()
	  }
	  class Transition{
	    input : String
	    target : State
	    fire()
	  }
	  FSM *-- State : ownedStates
	  State *-- Transition : outgoingTransitions
	
}

language_fsm <-- language_xsfsm : inherits

@enduml